Fix post pagination on mobile

--- a/assets/css/pagination.css
+++ b/assets/css/pagination.css
@@ -5,18 +5,15 @@
 
 .pagination__title {
   display: flex;
-  text-align: center;
   position: relative;
-  margin: 100px 0 20px;
+  margin: 100px 0 20px 0;
 }
 
 .pagination__title-h {
-  text-align: center;
   margin: 0 auto;
-  padding: 5px 10px;
+  padding: 4px 10px;
   background: var(--background);
-  color: color-mix(in srgb var(--foreground) 30%, transparent);
-  font-size: 0.8rem;
+  font-size: 1rem;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 0.1em;
@@ -41,7 +38,6 @@
 }
 
 .pagination__buttons a {
-  display: inline-flex;
   max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -86,12 +82,6 @@
 
 .prev .button__icon {
   margin-right: 8px;
-}
-
-@media (max-width: 684px) {
-  .button {
-    flex: 1;
-  }
 }
 
 @media print {
